[package]
name = "kvp-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
primitives = { package = "kvp-primitives", path = "../primitives" }
