[package]
name = "erasure_coding_fuzzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
kvp-erasure-coding = { path = ".." }
honggfuzz = "0.5"
kvp-primitives = { path = "../../primitives" }
primitives = { package = "kvp-node-primitives", path = "../../node/primitives/" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"
