[package]
name = "kvp-node-collation-generation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../gum" }
kvp-erasure-coding = { path = "../../erasure-coding" }
kvp-node-primitives = { path = "../primitives" }
kvp-node-subsystem = { path = "../subsystem" }
kvp-node-subsystem-util = { path = "../subsystem-util" }
kvp-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-maybe-compressed-blob  = { git = "https://github.com/paritytech/substrate", branch = "master" }
thiserror = "1.0.31"
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["bit-vec", "derive"] }

[dev-dependencies]
kvp-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
test-helpers = { package = "kvp-primitives-test-helpers", path = "../../primitives/test-helpers" }
assert_matches = "1.4.0"
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
