[package]
name = "tracing-gum"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Stick logs together with the TraceID as provided by tempo"

[dependencies]
coarsetime = "0.1.22"
tracing = "0.1.35"
jaeger = { path = "../jaeger", package = "kvp-node-jaeger" }
gum-proc-macro = { path = "./proc-macro", package = "tracing-gum-proc-macro" }
kvp-primitives = { path = "../../primitives", features = ["std"] }
