[package]
name = "kvp-test-malus"
description = "Misbehaving nodes for local testnets, system and Simnet tests."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[[bin]]
name = "malus"
path = "src/malus.rs"

# Use artifact dependencies once stable.
# See https://github.com/rust-lang/cargo/issues/9096.
[[bin]]
name = "kvp-execute-worker"
path = "../../src/bin/execute-worker.rs"
# Prevent rustdoc error. Already documented from top-level Cargo.toml.
doc = false
[[bin]]
name = "kvp-prepare-worker"
path = "../../src/bin/prepare-worker.rs"
# Prevent rustdoc error. Already documented from top-level Cargo.toml.
doc = false

[dependencies]
kvp-cli = { path = "../../cli", features = [ "malus", "rococo-native", "kusama-native", "westend-native", "kvp-native" ] }
kvp-node-subsystem = { path = "../subsystem" }
kvp-node-subsystem-util = { path = "../subsystem-util" }
kvp-node-subsystem-types = { path = "../subsystem-types" }
kvp-node-core-dispute-coordinator = { path = "../core/dispute-coordinator" }
kvp-node-core-candidate-validation = { path = "../core/candidate-validation" }
kvp-node-core-backing = { path = "../core/backing" }
kvp-node-primitives = { path = "../primitives" }
kvp-primitives = { path = "../../primitives" }
color-eyre = { version = "0.6.1", default-features = false }
assert_matches = "1.5"
async-trait = "0.1.57"
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../gum/" }
erasure = { package = "kvp-erasure-coding", path = "../../erasure-coding" }
rand = "0.8.5"

# Required for worker binaries to build.
kvp-node-core-pvf-common = { path = "../core/pvf/common", features = ["test-utils"] }
kvp-node-core-pvf-execute-worker = { path = "../core/pvf/execute-worker" }
kvp-node-core-pvf-prepare-worker = { path = "../core/pvf/prepare-worker" }

[dev-dependencies]
kvp-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.21", features = ["thread-pool"] }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = []
fast-runtime = ["kvp-cli/fast-runtime"]
