[package]
name = "kvp-overseer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
client = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = "0.3.21"
futures-timer = "3.0.2"
parking_lot = "0.12.0"
kvp-node-network-protocol = { path = "../network/protocol" }
kvp-node-primitives = { path = "../primitives" }
kvp-node-subsystem-types = { path = "../subsystem-types" }
kvp-node-metrics = { path = "../metrics" }
kvp-primitives = { path = "../../primitives" }
orchestra = "0.0.5"
gum = { package = "tracing-gum", path = "../gum" }
lru = "0.11.0"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
async-trait = "0.1.57"
tikv-jemalloc-ctl = { version = "0.5.0", optional = true }

[dev-dependencies]
metered = { package = "prioritized-metered-channel", version = "0.2.0" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.21", features = ["thread-pool"] }
femme = "2.2.1"
assert_matches = "1.4.0"
test-helpers = { package = "kvp-primitives-test-helpers", path = "../../primitives/test-helpers" }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemalloc-ctl = "0.5.0"

[features]
default = []
expand = ["orchestra/expand"]
dotgraph = ["orchestra/dotgraph"]
jemalloc-allocator = ["dep:tikv-jemalloc-ctl"]
