[package]
name = "kvp-node-primitives"
description = "Primitives types for the Node-side"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bounded-vec = "0.7"
futures = "0.3.21"
kvp-primitives = { path = "../../primitives" }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
kvp-parachain = { path = "../../parachain", default-features = false }
schnorrkel = "0.9.1"
thiserror = "1.0.31"
serde = { version = "1.0.163", features = ["derive"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = { version = "0.11.2", default-features = false }

[dev-dependencies]
kvp-erasure-coding = { path = "../../erasure-coding" }
