[package]
name = "kvp-service"
rust-version = "1.60"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "master" }
beefy = { package = "sc-consensus-beefy", git = "https://github.com/paritytech/substrate", branch = "master" }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
mmr-gadget = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "master"}
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "master" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "master" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/paritytech/substrate", branch = "master" }
grandpa_primitives = { package = "sp-consensus-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master" }

# External Crates
futures = "0.3.21"
hex-literal = "0.4.1"
gum = { package = "tracing-gum", path = "../gum/" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.31"
kvdb = "0.13.0"
kvdb-rocksdb = { version = "0.19.0", optional = true }
parity-db = { version = "0.4.8", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.1" }

async-trait = "0.1.57"
lru = "0.11.0"
log = "0.4.17"
is_executable = "1.0.1"

# kvp
kvp-core-primitives = { path = "../../core-primitives" }
kvp-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
kvp-overseer = { path = "../overseer" }
kvp-parachain = { path = "../../parachain" }
kvp-primitives = { path = "../../primitives" }
kvp-node-primitives = { path = "../primitives" }
kvp-rpc = { path = "../../rpc" }
kvp-node-subsystem = {path = "../subsystem" }
kvp-node-subsystem-util = { path = "../subsystem-util" }
kvp-node-subsystem-types = { path = "../subsystem-types" }
kvp-runtime-parachains = { path = "../../runtime/parachains" }
kvp-node-network-protocol = { path = "../network/protocol" }
kvp-runtime-common = { path = "../../runtime/common" }

# kvp Runtime Constants
kvp-runtime-constants = { path = "../../runtime/kvp/constants", optional = true }
kusama-runtime-constants = { path = "../../runtime/kusama/constants", optional = true }
rococo-runtime-constants = { path = "../../runtime/rococo/constants", optional = true }
westend-runtime-constants = { path = "../../runtime/westend/constants", optional = true }

# kvp Runtimes
kvp-runtime = { path = "../../runtime/kvp", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

# kvp Subsystems
kvp-approval-distribution = { path = "../network/approval-distribution", optional = true }
kvp-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
kvp-availability-distribution = { path = "../network/availability-distribution", optional = true }
kvp-availability-recovery = { path = "../network/availability-recovery", optional = true }
kvp-collator-protocol = { path = "../network/collator-protocol", optional = true }
kvp-dispute-distribution = { path = "../network/dispute-distribution", optional = true }
kvp-gossip-support = { path = "../network/gossip-support", optional = true }
kvp-network-bridge = { path = "../network/bridge", optional = true }
kvp-node-collation-generation = { path = "../collation-generation", optional = true }
kvp-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
kvp-node-core-av-store = { path = "../core/av-store", optional = true }
kvp-node-core-backing = { path = "../core/backing", optional = true }
kvp-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
kvp-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
kvp-node-core-chain-api = { path = "../core/chain-api", optional = true }
kvp-node-core-chain-selection = { path = "../core/chain-selection", optional = true }
kvp-node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
kvp-node-core-prospective-parachains = { path = "../core/prospective-parachains", optional = true }
kvp-node-core-provisioner = { path = "../core/provisioner", optional = true }
kvp-node-core-pvf = { path = "../core/pvf", optional = true }
kvp-node-core-pvf-checker = { path = "../core/pvf-checker", optional = true }
kvp-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
kvp-statement-distribution = { path = "../network/statement-distribution", optional = true }

[dev-dependencies]
kvp-test-client = { path = "../test/client" }
kvp-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
assert_matches = "1.5.0"
serial_test = "2.0.0"
tempfile = "3.2"

[features]
default = ["db", "full-node"]

db = [
	"service/rocksdb"
]

full-node = [
	"kvp-node-core-av-store",
	"kvp-node-core-approval-voting",
	"kvp-availability-bitfield-distribution",
	"kvp-availability-distribution",
	"kvp-availability-recovery",
	"kvp-collator-protocol",
	"kvp-dispute-distribution",
	"kvp-gossip-support",
	"kvp-network-bridge",
	"kvp-node-collation-generation",
	"kvp-node-core-backing",
	"kvp-node-core-bitfield-signing",
	"kvp-node-core-candidate-validation",
	"kvp-node-core-chain-api",
	"kvp-node-core-chain-selection",
	"kvp-node-core-dispute-coordinator",
	"kvp-node-core-prospective-parachains",
	"kvp-node-core-provisioner",
	"kvp-node-core-runtime-api",
	"kvp-statement-distribution",
	"kvp-approval-distribution",
	"kvp-node-core-pvf",
	"kvp-node-core-pvf-checker",
	"kvdb-rocksdb",
	"parity-db",
]

# Configure the native runtimes to use. kvp is enabled by default.
#
# Validators require the native runtime currently
kvp-native = [ "kvp-runtime", "kvp-runtime-constants" ]
kusama-native = [ "kusama-runtime", "kusama-runtime-constants" ]
westend-native = [ "westend-runtime", "westend-runtime-constants" ]
rococo-native = [ "rococo-runtime", "rococo-runtime-constants" ]

runtime-benchmarks = [
	"kvp-runtime?/runtime-benchmarks",
	"kusama-runtime?/runtime-benchmarks",
	"westend-runtime?/runtime-benchmarks",
	"rococo-runtime?/runtime-benchmarks",

	"service/runtime-benchmarks",
]
try-runtime = [
	"kvp-runtime?/try-runtime",
	"kusama-runtime?/try-runtime",
	"westend-runtime?/try-runtime",
	"rococo-runtime?/try-runtime",
]
fast-runtime = [
	"kvp-runtime?/fast-runtime",
	"kusama-runtime?/fast-runtime",
	"westend-runtime?/fast-runtime",
	"rococo-runtime?/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"rococo-runtime?/runtime-metrics",
	"westend-runtime?/runtime-metrics",
	"kusama-runtime?/runtime-metrics",
	"kvp-runtime?/runtime-metrics",
	"kvp-runtime-parachains/runtime-metrics"
]

network-protocol-staging = ["kvp-node-network-protocol/network-protocol-staging"]
