[package]
name = "kvp-node-subsystem-test-helpers"
description = "Subsystem traits and message definitions"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
parking_lot = "0.12.0"
kvp-node-subsystem = { path = "../subsystem" }
kvp-node-subsystem-util = { path = "../subsystem-util" }
kvp-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
kvp-overseer = { path = "../overseer" }
