[package]
name = "kvp-node-subsystem-types"
description = "Subsystem traits and message definitions"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
kvp-primitives = { path = "../../primitives" }
kvp-node-primitives = { path = "../primitives" }
kvp-node-network-protocol = { path = "../network/protocol" }
kvp-statement-table = { path = "../../statement-table" }
kvp-node-jaeger = { path = "../jaeger" }
orchestra = "0.0.5"
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
smallvec = "1.8.0"
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "master" }
thiserror = "1.0.31"
async-trait = "0.1.57"
