[package]
name = "kvp-node-subsystem"
description = "Subsystem traits and message definitions and the generated overseer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kvp-overseer = { path = "../overseer" }
kvp-node-subsystem-types = { path = "../subsystem-types" }
kvp-node-jaeger = { path = "../jaeger" }
