[package]
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
impl-trait-for-tuples = "0.2.1"
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
log = { version = "0.4.17", default-features = false }

# kvp dependencies
kvp-parachain = { path = "../../parachain", default-features = false }

[dev-dependencies]
primitive-types = "0.12.1"
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-xcm = { path = "../pallet-xcm" }
pallet-salary = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "master" }
primitives = { package = "kvp-primitives", path = "../../primitives" }
kvp-runtime-parachains = { path = "../../runtime/parachains" }
assert_matches = "1.5.0"
kvp-test-runtime = { path = "../../runtime/test-runtime" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
]
std = [
	"log/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"xcm/std",
	"xcm-executor/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-weights/std",
	"frame-support/std",
	"frame-system/std",
	"kvp-parachain/std",
	"pallet-transaction-payment/std",
]
