[package]
name = "kvp-node-core-backing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
kvp-primitives = { path = "../../../primitives" }
kvp-node-primitives = { path = "../../primitives" }
kvp-node-subsystem = {path = "../../subsystem" }
kvp-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "kvp-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "kvp-statement-table", path = "../../../statement-table" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
gum = { package = "tracing-gum", path = "../../gum" }
thiserror = "1.0.31"
fatality = "0.0.6"

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.21", features = ["thread-pool"] }
assert_matches = "1.4.0"
kvp-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "kvp-primitives-test-helpers", path = "../../../primitives/test-helpers" }
