[package]
name = "kvp-node-core-bitfield-signing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
kvp-primitives = { path = "../../../primitives" }
kvp-node-subsystem = { path = "../../subsystem" }
kvp-node-subsystem-util = { path = "../../subsystem-util" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
wasm-timer = "0.2.5"
thiserror = "1.0.31"

[dev-dependencies]
kvp-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "kvp-primitives-test-helpers", path = "../../../primitives/test-helpers" }
