[package]
name = "kvp-node-core-candidate-validation"
description = "kvp crate that implements the Candidate Validation subsystem. Handles requests to validate candidates according to a PVF."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../../gum" }

sp-maybe-compressed-blob = { package = "sp-maybe-compressed-blob", git = "https://github.com/paritytech/substrate", branch = "master" }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["bit-vec", "derive"] }

kvp-primitives = { path = "../../../primitives" }
kvp-parachain = { path = "../../../parachain" }
kvp-node-primitives = { path = "../../primitives" }
kvp-node-subsystem = { path = "../../subsystem" }
kvp-node-subsystem-util = { path = "../../subsystem-util" }
kvp-node-metrics = { path = "../../metrics" }
kvp-overseer = { path = "../../overseer" }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
kvp-node-core-pvf = { path = "../pvf" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.21", features = ["thread-pool"] }
assert_matches = "1.4.0"
kvp-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
test-helpers = { package = "kvp-primitives-test-helpers", path = "../../../primitives/test-helpers" }
