[package]
name = "kvp-node-core-chain-selection"
description = "Chain Selection Subsystem"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
futures-timer = "3"
gum = { package = "tracing-gum", path = "../../gum" }
kvp-primitives = { path = "../../../primitives" }
kvp-node-primitives = { path = "../../primitives" }
kvp-node-subsystem = { path = "../../subsystem" }
kvp-node-subsystem-util = { path = "../../subsystem-util" }
kvdb = "0.13.0"
thiserror = "1.0.31"
parity-scale-codec = "3.6.1"

[dev-dependencies]
kvp-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
parking_lot = "0.12.0"
assert_matches = "1"
kvdb-memorydb = "0.13.0"
