[package]
name = "kvp-node-core-pvf"
description = "kvp crate that implements the PVF validation host. Responsible for coordinating preparation and execution of PVFs."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "puppet_worker"
path = "bin/puppet_worker.rs"
required-features = ["test-utils"]

[dependencies]
always-assert = "0.1"
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../../gum" }
libc = "0.2.139"
pin-project = "1.0.9"
rand = "0.8.5"
slotmap = "1.0"
tempfile = "3.3.0"
tokio = { version = "1.24.2", features = ["fs", "process"] }

parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }

kvp-parachain = { path = "../../../parachain" }
kvp-core-primitives = { path = "../../../core-primitives" }
kvp-node-core-pvf-common = { path = "common" }
kvp-node-metrics = { path = "../../metrics" }
kvp-node-primitives = { path = "../../primitives" }
kvp-primitives = { path = "../../../primitives" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
kvp-node-core-pvf-prepare-worker = { path = "prepare-worker", optional = true }
kvp-node-core-pvf-execute-worker = { path = "execute-worker", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
assert_matches = "1.4.0"
hex-literal = "0.3.4"
kvp-node-core-pvf-common = { path = "common", features = ["test-utils"] }
# For the puppet worker, depend on ourselves with the test-utils feature.
kvp-node-core-pvf = { path = ".", features = ["test-utils"] }

adder = { package = "test-parachain-adder", path = "../../../parachain/test-parachains/adder" }
halt = { package = "test-parachain-halt", path = "../../../parachain/test-parachains/halt" }

[features]
ci-only-tests = []
# This feature is used to export test code to other crates without putting it in the production build.
# This is also used by the `puppet_worker` binary.
test-utils = ["kvp-node-core-pvf-prepare-worker", "kvp-node-core-pvf-execute-worker", "sp-tracing"]
