[package]
name = "kvp-node-core-runtime-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
lru = "0.11.0"

sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }

kvp-primitives = { path = "../../../primitives" }
kvp-node-metrics = { path = "../../metrics" }
kvp-node-subsystem = { path = "../../subsystem" }
kvp-node-subsystem-types = { path = "../../subsystem-types" }

[dev-dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
async-trait = "0.1.57"
futures = { version = "0.3.21", features = ["thread-pool"] }
kvp-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
kvp-node-primitives = { path = "../../primitives" }
test-helpers = { package = "kvp-primitives-test-helpers", path = "../../../primitives/test-helpers" }
