[package]
name = "kvp-approval-distribution"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kvp-node-metrics = { path = "../../metrics" }
kvp-node-network-protocol = { path = "../protocol" }
kvp-node-primitives = { path = "../../primitives" }
kvp-node-subsystem = { path = "../../subsystem" }
kvp-node-subsystem-util = { path = "../../subsystem-util" }
kvp-primitives = { path = "../../../primitives" }
kvp-node-jaeger = { path = "../../jaeger" }
rand = "0.8"

futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../../gum" }

[dev-dependencies]
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["std"] }

kvp-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
kvp-primitives-test-helpers = { path = "../../../primitives/test-helpers" }

assert_matches = "1.4.0"
schnorrkel = { version = "0.9.1", default-features = false }
rand_core = "0.5.1" # should match schnorrkel
rand_chacha = "0.3.1"
env_logger = "0.9.0"
log = "0.4.17"
